"Updating import statements"

--- a/query_engine.ipynb
+++ b/query_engine.ipynb
@@ -2,35 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# RAG\n",
     "\n",
     "import os\n",
+    "import streamlit as st\n",
     "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, StorageContext, load_index_from_storage\n",
     "from llama_index.core.response.pprint_utils import pprint_response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wilson/Desktop/SideProjects/specbook/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Parsing nodes: 100%|██████████| 1416/1416 [00:01<00:00, 909.26it/s]\n",
-      "Generating embeddings: 100%|██████████| 1427/1427 [00:20<00:00, 70.04it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check if storage exists\n",
+    "os.environ['OPENAI_API_KEY'] = st.secrets[\"OPENAI_API_KEY\"]\n",
     "PERSIST_DIR = \"./storage\"\n",
     "if not os.path.exists(PERSIST_DIR):\n",
     "    # load docs, create index\n",
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,18 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Response: File Name: 2024_Supplemental_Specs.pdf, Page Number:\n",
-      "35 End sections will be measured for payment as each, with each end of\n",
-      "each culvert being one each. For multi-cell box culverts, end sections\n",
-      "will be measured for payment as each, with each cell of each end of\n",
-      "culvert being one each.\n"
+      "Final Response: File Name: 2024_Supplemental_Specs.pdf   Page Number:\n",
+      "35   The method of measurement for pipe culvert end is as follows: End\n",
+      "sections will be measured for payment as each, with each end of each\n",
+      "culvert being one each. For multi-cell box culverts, end sections will\n",
+      "be measured for payment as each, with each cell of each end of culvert\n",
+      "being one each.\n"
      ]
     }
    ],
@@ -91,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
